# somto-dev-toolkit

./: .gitignore  BLOG-SESSION-MEMORY.md  README.md  pyproject.toml
.claude/: .current_session
.claude-plugin/: marketplace.json  plugin.json
agents/: prd-codebase-researcher.md  prd-complexity-estimator.md  prd-external-researcher.md
commands/: cancel-e2e.md  cancel-go.md  cancel-prd.md  cancel-test-coverage.md  cancel-ut.md  cancel-work.md  complete.md  deslop.md  e2e-help.md  e2e.md  fork-detect.md  go-help.md  go.md  gwt.md  interview.md  prd.md  setup-git-guard.md  setup-gwt.md  setup-memory.md  sync-sessions.md  task-sync.md  test-coverage-help.md  test-coverage.md  ut-help.md  ut.md  work-help.md  work.md
docs/: docker-claude-setup-guide.md
hooks/: e2e_stop_hook.sh  fork_suggest_hook.py  fork_suggest_hook.sh  git_guard.py  go_stop_hook.sh  hooks.json  keyword_extractor.py  memory_injection.py  prd_schema_validator.py  precompact_sync.py  prompt_context.py  session_start.sh  stop_hook.sh  stop_hook_test.sh  subagent_stop_hook.sh  test_coverage_stop_hook.sh  ut_stop_hook.sh  work_stop_hook.sh
scripts/: afk-go.sh  afk.sh  gwt  scheduled-session-sync.sh  setup-e2e-loop.sh  setup-go-loop.sh  setup-prd.sh  setup-qmd-sessions.sh  setup-scheduled-sync.sh  setup-test-coverage-loop.sh  setup-ut-loop.sh  setup-work-loop.sh  sync-sessions-to-qmd.sh  uninstall-scheduled-sync.sh
scripts/lib/: loop-helpers.sh
skills/background-agents/: SKILL.md
skills/biome-gritql/: SKILL.md
skills/dex-workflow/: SKILL.md
tests/: stop_hook_test.sh  test_keyword_extractor.py
(+12 files in other folders)
